--- a/landing-files/style.css
+++ b/landing-files/style.css
@@ -30,8 +30,139 @@ body {
   font-family: "Gilroy-Regular", sans-serif;
   height: 100vh;
   overflow: scroll;
+  overflow-x: hidden !important;
   background: -webkit-gradient(linear, left top, right top, from(rgba(131, 139, 197, 0.2)), color-stop(rgba(131, 139, 197, 0.4)), color-stop(rgba(131, 139, 197, 0.4)), to(rgba(131, 139, 197, 0.2)));
   background: linear-gradient(to right, rgba(131, 139, 197, 0.2), rgba(131, 139, 197, 0.4), rgba(131, 139, 197, 0.4), rgba(131, 139, 197, 0.2));
+}
+
+body .sidebar-container {
+  background-color: #3251bf;
+  padding: 30px 50px 50px 50px;
+  position: relative;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: none;
+  overflow: hidden;
+  z-index: 100;
+  padding-top: 60px;
+}
+
+body .sidebar-container.side-bar-show {
+  -webkit-animation: slide-right 0.5s ease-in-out forwards;
+          animation: slide-right 0.5s ease-in-out forwards;
+}
+
+body .sidebar-container.side-bar-hide {
+  -webkit-animation: sidebar-slide-left 0.5s ease-in-out forwards;
+          animation: sidebar-slide-left 0.5s ease-in-out forwards;
+}
+
+@-webkit-keyframes slide-right {
+  from {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  to {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@keyframes slide-right {
+  from {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  to {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@-webkit-keyframes sidebar-slide-left {
+  from {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  to {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+@keyframes sidebar-slide-left {
+  from {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  to {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+body .sidebar-container ul {
+  list-style: none;
+  color: white;
+  margin-top: 40px;
+}
+
+body .sidebar-container ul li {
+  margin-bottom: 20px;
+}
+
+body .sidebar-container ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+body .sidebar-container .logo svg {
+  height: 100px;
+  width: 255px;
+}
+
+body .sidebar-container .close {
+  position: absolute;
+  right: 10px;
+  top: 30px;
+  padding: 5px 10px;
+  color: white;
+}
+
+body .sidebar-container .sidebar-social {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+body .sidebar-container .sidebar-social a {
+  text-decoration: none;
+}
+
+body .sidebar-container .sidebar-social svg {
+  height: 30px;
+  fill: #3251bf;
+}
+
+body .hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 550px) {
+  body .sidebar-container {
+    display: block;
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  body .hamburger {
+    display: block;
+  }
 }
 
 body .whole-container {
@@ -237,17 +368,10 @@ body .first-container .navbar .links .social-links img {
 
 @media screen and (max-width: 800px) and (max-width: 650px) and (max-width: 550px) {
   body .first-container .navbar .logo svg {
-    width: 160px;
+    width: 220px;
   }
-  body .first-container .navbar .links .social-links {
+  body .first-container .navbar .links {
     display: none;
-  }
-  body .first-container .navbar .links .other-links {
-    gap: 10px;
-    margin-right: 0;
-  }
-  body .first-container .navbar .links .other-links a {
-    font-size: 10px;
   }
 }
 
