--- a/landing-files/style.css
+++ b/landing-files/style.css
@@ -35,6 +35,10 @@ body {
   background: linear-gradient(to right, rgba(131, 139, 197, 0.2), rgba(131, 139, 197, 0.4), rgba(131, 139, 197, 0.4), rgba(131, 139, 197, 0.2));
 }
 
+body button {
+  border-radius: 5px;
+}
+
 body .sidebar-container {
   background-color: #3251bf;
   padding: 30px 50px 50px 50px;
@@ -276,6 +280,10 @@ body .inner-container.hide {
           animation: fade-out 1s ease-in-out forwards;
 }
 
+body .first-container {
+  position: relative;
+}
+
 body .first-container .content-container {
   height: calc(100% - 55px);
 }
@@ -375,11 +383,122 @@ body .first-container .navbar .links .social-links img {
   }
 }
 
-body .fourth-container {
+body .first-container .show-more {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .first-container .show-more p {
+  font-size: 18px;
+  cursor: pointer;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  font-weight: bolder;
+}
+
+body .fourth-container .timeline {
+  margin: 20px auto;
+  padding: 20px;
+}
+
+body .fourth-container .outer {
+  padding: 10px;
+}
+
+body .fourth-container .card {
+  border-left: 9px solid #3251bf;
+  position: relative;
+  padding-left: 40px;
+  padding-bottom: 50px;
+  color: black;
+  margin: 0;
+}
+
+body .fourth-container .card:last-child {
+  border-left: 9px solid transparent;
+  padding-bottom: 0;
+}
+
+body .fourth-container .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+body .fourth-container .title {
+  position: relative;
+  font-size: 24px;
+  font-family: "Gilroy-Bold", sans-serif;
+}
+
+body .fourth-container .title::before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  background: #3251bf;
+  border-radius: 999px;
+  left: -56.5px;
+  -webkit-transform: translateY(-1px);
+          transform: translateY(-1px);
+}
+
+@media screen and (max-width: 880px) {
+  body .fourth-container .card {
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  body .fourth-container .title {
+    font-size: 16px;
+  }
+  body .fourth-container .info p {
+    font-size: 10px;
+  }
+}
+
+body .fifth-container .main-content {
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .fifth-container .image-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+}
+
+body .fifth-container .image-container img {
+  height: 100px;
+}
+
+body .sixth-container {
   padding: 0px;
 }
 
-body .fourth-container .content-container {
+body .sixth-container .content-container {
   height: 100%;
   width: 100%;
   -webkit-box-orient: vertical;
@@ -391,17 +510,17 @@ body .fourth-container .content-container {
           justify-content: flex-end;
 }
 
-body .fourth-container .content-container .main-content {
+body .sixth-container .content-container .main-content {
   height: calc(100% - 236px);
 }
 
 @media screen and (max-width: 550px) {
-  body .fourth-container .content-container .main-content {
+  body .sixth-container .content-container .main-content {
     height: calc(100% - 371px);
   }
 }
 
-body .fourth-container .content-container .main-content .text-container {
+body .sixth-container .content-container .main-content .text-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -418,36 +537,88 @@ body .fourth-container .content-container .main-content .text-container {
           align-items: center;
 }
 
-body .fourth-container .content-container .main-content .text-container p {
+body .sixth-container .content-container .main-content .text-container p {
   font-family: "Gilroy-Bold", sans-serif;
   margin: 10px 0;
   font-size: 20px;
 }
 
-body .fourth-container .content-container .main-content .text-container .last-social-links {
-  background-color: white;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 10px;
-  border-radius: 20px;
+body .sixth-container .content-container .main-content .text-container .whole-links-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  margin-top: 30px;
 }
 
-body .fourth-container .content-container .main-content .text-container .last-social-links a {
+@media screen and (max-width: 540px) {
+  body .sixth-container .content-container .main-content .text-container .whole-links-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+    margin-bottom: 10px;
+  }
+}
+
+body .sixth-container .content-container .main-content .text-container .whole-links-container .links-container {
+  padding: 30px;
+  background-color: white;
+  border-radius: 10px;
+  min-width: 210px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+body .sixth-container .content-container .main-content .text-container .whole-links-container .links-container img {
+  height: 45px;
+}
+
+body .sixth-container .content-container .main-content .text-container .last-social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .sixth-container .content-container .main-content .text-container .last-social-links a {
   text-decoration: none;
 }
 
-body .fourth-container .content-container .main-content .text-container .last-social-links svg {
+body .sixth-container .content-container .main-content .text-container .last-social-links svg {
   height: 30px;
-  fill: #3251bf;
+  fill: black;
 }
 
-body .fourth-container .footer-container {
+body .sixth-container .content-container .main-content .text-container .last-social-links img {
+  height: 25px;
+  width: 25px;
+  margin: 0 15px 0 10px;
+}
+
+body .sixth-container .footer-container {
   width: 100%;
   background-color: #3251bf;
 }
 
-body .fourth-container .footer-container .footer-content {
+body .sixth-container .footer-container .footer-content {
   max-width: 1000px;
   margin: auto;
   color: white;
@@ -461,50 +632,50 @@ body .fourth-container .footer-container .footer-content {
   padding: 30px 20px 60px 20px;
 }
 
-body .fourth-container .footer-container .footer-content .text-container {
+body .sixth-container .footer-container .footer-content .text-container {
   width: 100%;
 }
 
-body .fourth-container .footer-container .footer-content .links {
+body .sixth-container .footer-container .footer-content .links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 100px;
 }
 
-body .fourth-container .footer-container .footer-content .logo {
+body .sixth-container .footer-container .footer-content .logo {
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
 }
 
-body .fourth-container .footer-container .footer-content .logo svg {
+body .sixth-container .footer-container .footer-content .logo svg {
   height: 100px;
   width: 255px;
 }
 
-body .fourth-container .footer-container .footer-content ul {
+body .sixth-container .footer-container .footer-content ul {
   list-style: none;
 }
 
-body .fourth-container .footer-container .footer-content ul li {
+body .sixth-container .footer-container .footer-content ul li {
   margin-top: 20px;
 }
 
-body .fourth-container .footer-container .footer-content ul li a {
+body .sixth-container .footer-container .footer-content ul li a {
   text-decoration: none;
   color: white;
 }
 
 @media screen and (max-width: 730px) {
-  body .fourth-container .footer-container .footer-content {
+  body .sixth-container .footer-container .footer-content {
     gap: 0;
     width: 100%;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  body .fourth-container .footer-container .footer-content .links {
+  body .sixth-container .footer-container .footer-content .links {
     gap: 30px;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -513,7 +684,7 @@ body .fourth-container .footer-container .footer-content ul li a {
 }
 
 @media screen and (max-width: 730px) and (max-width: 580px) {
-  body .fourth-container .footer-container .footer-content {
+  body .sixth-container .footer-container .footer-content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -522,7 +693,7 @@ body .fourth-container .footer-container .footer-content ul li a {
         -ms-flex-align: start;
             align-items: flex-start;
   }
-  body .fourth-container .footer-container .footer-content .links {
+  body .sixth-container .footer-container .footer-content .links {
     margin-top: 30px;
   }
 }
