--- a/landing-files/style.scss
+++ b/landing-files/style.scss
@@ -36,6 +36,9 @@ body {
 		rgba(#838bc5, 0.4),
 		rgba(#838bc5, 0.2)
 	);
+	button {
+		border-radius: 5px;
+	}
 	.sidebar-container {
 		background-color: $primary-col;
 		padding: 30px 50px 50px 50px;
@@ -218,6 +221,7 @@ body {
 		}
 	}
 	.first-container {
+		position: relative;
 		.content-container {
 			height: calc(100% - 55px);
 		}
@@ -303,8 +307,94 @@ body {
 				}
 			}
 		}
+		.show-more {
+			position: absolute;
+			bottom: 20px;
+			left: 0;
+			right: 0;
+			display: flex;
+			justify-content: center;
+			p {
+				font-size: 18px;
+				cursor: pointer;
+				width: max-content;
+				font-weight: bolder;
+			}
+		}
 	}
 	.fourth-container {
+		.timeline {
+			margin: 20px auto;
+			padding: 20px;
+		}
+
+		.outer {
+			padding: 10px;
+		}
+
+		.card {
+			&:last-child {
+				border-left: 9px solid transparent;
+				padding-bottom: 0;
+			}
+			border-left: 9px solid $primary-col;
+			position: relative;
+			padding-left: 40px;
+			padding-bottom: 50px;
+			color: black;
+			margin: 0;
+		}
+
+		.info {
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+		}
+
+		.title {
+			position: relative;
+			font-size: 24px;
+			font-family: "Gilroy-Bold", sans-serif;
+		}
+		.title::before {
+			content: "";
+			position: absolute;
+			width: 24px;
+			height: 24px;
+			background: $primary-col;
+			border-radius: 999px;
+			left: -56.5px;
+			transform: translateY(-1px);
+		}
+		@media screen and (max-width: 880px) {
+			.card {
+				padding-bottom: 30px;
+			}
+		}
+		@media screen and (max-width: 700px) {
+			.title {
+				font-size: 16px;
+			}
+			.info p {
+				font-size: 10px;
+			}
+		}
+	}
+	.fifth-container {
+		.main-content {
+			width: 100%;
+			flex-direction: column;
+			justify-content: center;
+		}
+		.image-container {
+			display: flex;
+			gap: 50px;
+			img {
+				height: 100px;
+			}
+		}
+	}
+	.sixth-container {
 		padding: 0px;
 		.content-container {
 			height: 100%;
@@ -328,17 +418,45 @@ body {
 						margin: 10px 0;
 						font-size: 20px;
 					}
+					.whole-links-container {
+						display: flex;
+						gap: 30px;
+						margin-top: 30px;
+						@media screen and (max-width: 540px) {
+							flex-direction: column;
+							gap: 20px;
+							margin-bottom: 10px;
+						}
+						.links-container {
+							padding: 30px;
+							background-color: white;
+							border-radius: 10px;
+							min-width: 210px;
+							display: flex;
+							align-items: center;
+							justify-content: center;
+							flex-direction: column;
+
+							img {
+								height: 45px;
+							}
+						}
+					}
 					.last-social-links {
-						background-color: white;
-						width: max-content;
-						padding: 10px;
-						border-radius: 20px;
+						display: flex;
+						align-items: center;
+						justify-content: center;
 						a {
 							text-decoration: none;
 						}
 						svg {
 							height: 30px;
-							fill: $primary-col;
+							fill: black;
+						}
+						img {
+							height: 25px;
+							width: 25px;
+							margin: 0 15px 0 10px;
 						}
 					}
 				}
