--- a/landing-files/style.css
+++ b/landing-files/style.css
@@ -472,15 +472,41 @@ body .fourth-container .title::before {
   }
 }
 
-body .fifth-container .main-content {
-  width: 100%;
+body .fifth-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+body .fifth-container .fifth-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 50px;
+}
+
+body .fifth-container .text-container h1 {
+  font-family: "Gilroy-Bold", sans-serif;
+  font-size: 64px;
+}
+
+@media screen and (max-width: 600px) {
+  body .fifth-container .text-container h1 {
+    font-size: 40px;
+  }
 }
 
 body .fifth-container .image-container {
@@ -490,8 +516,24 @@ body .fifth-container .image-container {
   gap: 50px;
 }
 
+body .fifth-container .image-container div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+}
+
 body .fifth-container .image-container img {
   height: 100px;
+}
+
+@media screen and (max-width: 600px) {
+  body .fifth-container .image-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 body .sixth-container {
