--- a/landing-files/style.css
+++ b/landing-files/style.css
@@ -553,6 +553,7 @@ body .sixth-container .content-container {
 }
 
 body .sixth-container .content-container .main-content {
+  margin-bottom: 20px;
   height: calc(100% - 236px);
 }
 
@@ -600,7 +601,7 @@ body .sixth-container .content-container .main-content .text-container .whole-li
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 20px;
-    margin-bottom: 10px;
+    margin-top: 15px;
   }
 }
 
@@ -716,6 +717,7 @@ body .sixth-container .footer-container .footer-content ul li a {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    padding-bottom: 20px;
   }
   body .sixth-container .footer-container .footer-content .links {
     gap: 30px;
