--- a/landing-files/style.scss
+++ b/landing-files/style.scss
@@ -422,6 +422,7 @@ body {
 			flex-direction: column;
 			justify-content: flex-end;
 			.main-content {
+				margin-bottom: 20px;
 				height: calc(100% - 236px);
 				@media screen and (max-width: 550px) {
 					height: calc(100% - 371px);
@@ -445,7 +446,7 @@ body {
 						@media screen and (max-width: 540px) {
 							flex-direction: column;
 							gap: 20px;
-							margin-bottom: 10px;
+							margin-top: 15px;
 						}
 						.links-container {
 							padding: 30px;
@@ -521,6 +522,7 @@ body {
 					gap: 0;
 					width: 100%;
 					justify-content: space-between;
+					padding-bottom: 20px;
 					.links {
 						gap: 30px;
 						justify-content: space-between;
