fixed roadmap bug

--- a/landing-files/style.css
+++ b/landing-files/style.css
@@ -304,7 +304,7 @@ body .first-container .navbar .logo {
   height: 50px;
 }
 
-body .first-container .navbar .logo svg {
+body .first-container .navbar .logo img {
   height: 50px;
   width: 300px;
 }
