--- a/landing-files/style.scss
+++ b/landing-files/style.scss
@@ -232,7 +232,7 @@ body {
 			align-items: center;
 			.logo {
 				height: 50px;
-				svg {
+				img {
 					height: 50px;
 					width: 300px;
 				}
