--- a/landing-files/style.scss
+++ b/landing-files/style.scss
@@ -28,7 +28,6 @@ body {
 	font-family: "Gilroy-Regular", sans-serif;
 	height: 100vh;
 	overflow: scroll;
-	// overflow: hidden;
 	overflow-x: hidden !important;
 	background: linear-gradient(
 		to right,
@@ -503,13 +502,13 @@ body {
 			height: 100%;
 			width: 100%;
 			flex-direction: column;
-			justify-content: flex-end;
+			justify-content: space-between;
 			.main-content {
 				margin-bottom: 20px;
-				height: calc(100% - 236px);
-				@media screen and (max-width: 550px) {
-					height: calc(100% - 371px);
-				}
+				height: 100%;
+				display: flex;
+				justify-self: center;
+				align-items: center;
 				.text-container {
 					display: flex;
 					text-align: center;
@@ -575,49 +574,18 @@ body {
 				color: white;
 				display: flex;
 				align-items: center;
-				gap: 100px;
-				padding: 30px 20px 60px 20px;
-				.text-container {
-					width: 100%;
-				}
-				.links {
-					display: flex;
-					gap: 100px;
-				}
-				.logo {
-					height: max-content;
-					svg {
-						height: 100px;
-						width: 255px;
-					}
-				}
-				ul {
-					list-style: none;
-					li {
-						margin-top: 20px;
-						a {
-							text-decoration: none;
-							color: white;
-						}
-					}
-				}
-				@media screen and (max-width: 730px) {
-					gap: 0;
-					width: 100%;
-					justify-content: space-between;
-					padding-bottom: 20px;
-					.links {
-						gap: 30px;
-						justify-content: space-between;
-					}
-					@media screen and (max-width: 580px) {
-						flex-direction: column;
-						align-items: flex-start;
+				justify-content: space-between;
+				padding: 20px;
+				img {
+					width: 255px;
 
-						.links {
-							margin-top: 30px;
-						}
+					@media screen and (max-width: 565px) {
+						width: 200px;
 					}
+				}
+
+				a {
+					color: white;
 				}
 			}
 		}
